force-app/main/default/objects/Account_Business_Unit__c/Account_Business_Unit__c.object-meta.xml
<CustomObject>
    <description>Many-to-many Account to Business Unit (Territory2) links with Potentiality and Propensity.</description>
    <label>Account Business Unit</label>
    <nameField>
        <displayFormat>ABU-{00000}</displayFormat>
        <label>Account Business Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Business Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>