force-app/main/default/objects/Account_Business_Unit__c/fields/Business_Unit_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_External_ID__c</fullName>
    <description>Stamped from Territory2.External_ID__c (for example TERR_BU_*). System-maintained.</description>
    <externalId>true</externalId>
    <label>Business Unit External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>