force-app/main/default/objects/Account_Business_Unit__c/fields/Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Name__c</fullName>
    <description>Stamped from Territory2.Name. System-maintained; not meant for manual edit.</description>
    <label>Business Unit Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>