force-app/main/default/objects/Account_Business_Unit__c/fields/Business_Unit_Territory2_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Territory2_Id__c</fullName>
    <description>Territory2 Id for a Business_Unit territory. Salesforce does not support custom lookups to Territory2.</description>
    <inlineHelpText>18-character Territory2 Id where Territory Type is Business Unit.</inlineHelpText>
    <label>Business Unit Territory Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>