force-app/main/default/objects/Account_Business_Unit__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Set automatically when the link is deactivated.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>