force-app/main/default/objects/Account_Business_Unit__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive links stay for history but are hidden from new planning, visits, and MR chips.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>