force-app/main/default/objects/Account_Business_Unit__c/fields/Potentiality__c.field-meta.xml
<CustomField>
    <fullName>Potentiality__c</fullName>
    <description>Potentiality for this Account within the Business Unit. Same A/B/C scale as Account Territory Fields Potential.</description>
    <label>Potentiality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>