force-app/main/default/objects/Account_Business_Unit__c/fields/Propensity__c.field-meta.xml
<CustomField>
    <fullName>Propensity__c</fullName>
    <description>Propensity for this Account within the Business Unit. Same 1/2/3 scale as Account Territory Fields Penetration.</description>
    <label>Propensity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>