force-app/main/default/objects/Account_Business_Unit__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>AccountId:BusinessUnitTerritory2Id. Populated automatically on save.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>